# sparkRAG

./: .gitignore  pyproject.toml
data/: example.txt
src/spark_rag/: __main__.py  chunking.py  ingest.py
