[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-rag"
version = "0.1.0"
description = "Spark Active Recall RAG: ingest content and generate grounded active retrieval exercises."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
spark-rag = "spark_rag.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spark_rag"]
